# magpie

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  config.yaml  kernel_config.yaml.example  main.py  mcp_config.json  mcp_server.py  pyproject.toml  requirements.txt
.github/: CODEOWNERS
Magpie/: __init__.py  __main__.py  benchmark_config.yaml.example  benchmark_images.yaml  config.yaml  kernel_config.yaml.example  main.py
Magpie/config/: __init__.py  correctness.py  kernel.py  performance.py  pipeline.py
Magpie/core/: __init__.py  executor.py  job_store.py  ray_executor.py  scheduler.py  task.py
Magpie/eval/: __init__.py  compiling.py  correctness.py  evaluator.py  performance.py
Magpie/mcp/: __init__.py  __main__.py  config.json  discovery.py  server.py
Magpie/modes/: __init__.py
Magpie/remote/: __init__.py  entrypoint.py  tasks.py
Magpie/utils/: __init__.py  common.py  gpu.py  gpu_monitor.py
docs/: analysis_compare.md  benchmark.md  kernel_source_finder.md  ray-magpie.md  skills-install.md
examples/: benchmark_inferencemax.yaml  benchmark_sglang.yaml  benchmark_vllm.yaml  benchmark_vllm_gptoss_120b.yaml  benchmark_vllm_kimi_k2.yaml  benchmark_vllm_tracelens.yaml  ck_gemm_add.yaml  ck_gemm_add_accordo.yaml  ck_gemm_add_ray.yaml  ck_grouped_gemm_compare.yaml  ck_grouped_gemm_compare_accordo.yaml
examples/benchmarks/: benchmark_inferencemax.yaml  benchmark_inferencex.yaml  benchmark_sglang_dsr1.yaml  benchmark_vllm_dsr1.yaml  benchmark_vllm_dsr1_ray.yaml  benchmark_vllm_dsv32_fp8.yaml  benchmark_vllm_dsv32_mxfp4.yaml  benchmark_vllm_glm51_fp8.yaml  benchmark_vllm_glm5_fp8.yaml  benchmark_vllm_gptoss_120b.yaml  benchmark_vllm_gptoss_20b.yaml  benchmark_vllm_kimi_k2.yaml  benchmark_vllm_kimi_k2_ray.yaml  benchmark_vllm_qwen3_ray.yaml  (+7 more)
skills/: install-skill.sh
src/: __init__.py
tests/: test_benchmark_support.py  test_common_and_remote_tasks.py  test_discover_kernels.py  test_main_and_kernel_config.py
(+57 files in other folders)
